--- a/src/shared/components/Navigation/MainHeader.css
+++ b/src/shared/components/Navigation/MainHeader.css
@@ -1,7 +1,7 @@
-@tailwind base;
+.main-header {
+    @apply w-full h-16 flex items-center fixed top-0 left-0 bg-headred shadow-headshadow py-0 px-4 z-10 md:justify-between;
+  }
 
-@layer base {
-    header {
-        @apply w-full h-16 flex items-center fixed top-0 left-0 bg-headred shadow-headshadow py-0 px-4 z-10;
-    }
-}
+  main {
+    @apply mt-24;
+  }
