--- a/src/shared/components/UIElements/Avatar.css
+++ b/src/shared/components/UIElements/Avatar.css
@@ -1,7 +1,7 @@
-.a-div {
+.avatar {
     @apply w-full h-full flex justify-center items-center;
 }
 
-.a-img {
+.avatar img {
     @apply block rounded-50 w-full h-full object-cover;
 }
