--- a/src/places/Components/PlaceItem.css
+++ b/src/places/Components/PlaceItem.css
@@ -17,6 +17,10 @@
 .place-item__image img {
     @apply w-full h-full object-cover;
 }
+
+.map-head {
+    @apply w-full h-full;
+}
   
 .place-item__info h2,
 .place-item__info h3,
@@ -42,5 +46,5 @@
 }
 
 .map-container {
-    @apply h-80 w-full;
+    @apply h-60 w-full;
 }
